[package]
name = "echo-server"
version = "0.2.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-tokio-actor = "0.3"
tokio = { version = "1", features = ["rt", "time", "signal", "rt-multi-thread", "macros"] }
futures = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
whoami = "1.1.5"
askama = "0.11"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
warp = "0.3"
bytes = "1.1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
